<resources>
    <string name="app_name">City University Manager</string>
    <string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="menu_main_clear_title">Clear all</string>
    <string name="menu_main_copy">Copy IDs</string>
    <string name="menu_copy_hex">Hex</string>
    <string name="menu_copy_reversed_hex">Reversed hex</string>
    <string name="menu_copy_dec">Dec</string>
    <string name="menu_copy_reversed_dec">Reversed dec</string>
    <string name="nothing_scanned">Nothing scanned yet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tag_reader">TagReaderActivity</string>
    <string name="title_activity_classes">Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="action_login">Login</string>
    <string name="prompt_user">Email</string>
    <string name="login_header">Login</string>
    <string name="action_signing_in">Signing in..</string>
    <string name="sign_up_syncing_completed">Syncing Completed</string>
    <string name="sign_in_invalid_credential">Invalid Credential</string>
    <string name="error_sign_iin">Sign in Failed</string>
    <string name="sign_up_syncing">Syncing</string>
    <string name="label_students">Students :</string>
    <string name="attendance_out">Not in Class yet.</string>
    <string name="attendance_in">In Class.</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="menu_main_export">Export</string>
</resources>
